[package]
name = "blue-pill-quickstart"
version = "0.1.0"
authors = ["Guillaume Pinot <texitoi@texitoi.eu>"]

[dependencies]
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal", branch = "master" }
stm32f103xx = { version = "0.10", features = ["rt"] }
cortex-m = "0.5"
cortex-m-rt = { version = "0.5", features = ["device"] }
panic-semihosting = "0.3"
pwm-speaker = { git = "https://github.com/TeXitoi/pwm-speaker" }
embedded-hal = "0.2.1"
